Fix: featured.scss-icon added color & index-mobile aligned with the pixlayout

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -28,6 +28,7 @@
 
 .contacts__email-content {
   margin-left: 30px;
+  padding-bottom: 5px;
   border-bottom: 1px solid $bg-aqua;
 }
 
