--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -15,11 +15,11 @@
 
 .main-footer__social {
   padding-top: 30px;
-  padding-bottom: 22px;
+  padding-bottom: 19px;
 }
 
 .main-footer__copyright {
-  padding-top: 22px;
+  padding-top: 19px;
   padding-bottom: 30px;
 }
 
