--- a/source/sass/blocks/promotion.scss
+++ b/source/sass/blocks/promotion.scss
@@ -1,5 +1,7 @@
 .promotion {
   position: relative;
+  display: flex;
+  justify-content: center;
   padding-top: 30px;
   padding-bottom: 45px;
   background-color: $bg-white;
@@ -8,9 +10,10 @@
     content: "";
     position: absolute;
     bottom: 0;
-    width: 100%;
+    // width: 100%;
+    width: 319px;
     height: 6px;
-    // background-image: url("../img/zigzag-line-mobile.png");
+    background-image: url("../img/bg-zigzag-line.svg");
   }
 }
 
@@ -19,6 +22,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
+
+  // outline: 1px solid red;
 }
 
 .promotion__title {
@@ -67,7 +72,7 @@
 .promotion__image {
   width: 260px;
   height: 315px;
-  margin-bottom: 28px;
+  margin-bottom: 22px;
 }
 
 .promotion__price {
@@ -79,12 +84,13 @@
 
 @media (min-width: $tablet-width) {
   .promotion {
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
     padding-top: 35px;
-    padding-bottom: 70px;
+    padding-bottom: 63px;
 
     &::after {
+      width: 768px;
       height: 17px;
       // background-image: url("../img/zigzag-line-tablet.png");
     }
@@ -143,12 +149,12 @@
   }
 
   .promotion__price {
-    margin-top: -107px;
+    margin-top: -112px;
     font-size: 20px;
   }
 
   .promotion__button {
-    margin-top: -50px;
+    margin-top: -57px;
   }
 }
 
